<resources>
    <string name="service_label">Audio Media Player</string>
    <string name="notification_fallback_info_format">%1$s - %2$s</string>
    <string name="widget_label_4x1">Audio Player (4x1)</string>
    <string name="widget_label_4x2">Audio Player (4x2)</string>
    <string name="widget_content_empty_playlist">Empty playlist</string>
    <string name="widget_content_start_app">Open player</string>
    <string name="activity_title_settings">Settings</string>
    <string name="activity_title_global_settings">Global settings</string>
    <string name="activity_title_library_path">Location settings</string>
    <string name="activity_title_library_file_extensions">File extensions settings</string>
    <string name="activity_label_files_to_scan">Files to scan</string>
    <string name="activity_label_art_selection">Art selection</string>
    <string name="activity_label_deezer_signin">Connection to Deezer service</string>
    <string name="activity_label_deezer_signout">Disconnect</string>
    <string name="alert_dialog_button_edit">"Edit"</string>
    <string name="alert_dialog_title_album_properties">Album properties</string>
    <string name="alert_dialog_title_media_properties">Media properties</string>
    <string name="alert_dialog_title_playlist_is_empty">Playlist is empty</string>
    <string name="alert_dialog_message_playlist_is_empty">There is nothing to play !\nPlease add something to playlist.</string>
    <string name="alert_dialog_title_playlist_delete">Confirmation</string>
    <string name="alert_dialog_message_playlist_delete">Do you really want to delete this playlist ?</string>
    <string name="alert_dialog_title_art_change_tracks">Question</string>
    <string name="alert_dialog_message_art_change_tracks">Update medias with this art ?</string>
    <string name="alert_dialog_message_restore_art_change_tracks">Restore medias arts ?</string>
    <string name="alert_dialog_title_search_path_exists">Path already registered</string>
    <string name="alert_dialog_message_search_path_exists">This folder is already to be analyzed or excluded.</string>
    <string name="alert_dialog_title_add_to_playlist">@string/menuitem_label_add_to_playlist</string>
    <string name="alert_dialog_title_premium_hint">Trial period has expired.</string>
    <string name="alert_dialog_message_premium_hint">Ads will be displayed occasionally unless you buy the premium version.</string>
    <string name="alert_dialog_title_premium_positive_button">Buy premium version</string>
    <string name="alert_dialog_title_premium_negative_button">Ignore</string>
    <string name="alert_dialog_title_type_of_library">Type of library</string>
    <string name="alert_dialog_message_reinitialize_presets">Reinitialize presets to defaults ?</string>
    <string name="preference_screen_title_ui">Interface</string>
    <string name="preference_title_preset">Presets</string>
    <string name="preference_title_primary_color">Primary color</string>
    <string name="preference_summary_primary_color">"Toolbars background color"</string>
    <string name="preference_title_accent_color">"Accent color"</string>
    <string name="preference_summary_accent_color">"Accent color for current tab and other graphical elements."</string>
    <string name="preference_title_foreground_color">Text color</string>
    <string name="preference_summary_foreground_color">Text color on Tabs and toolbars.</string>
    <string name="preference_title_toolbar_dark_icons">Use dark icons</string>
    <string name="preference_summary_toolbar_dark_icons">"Use dark icons on toolbars."</string>
    <string name="preference_screen_title_storage">Storage</string>
    <string name="preference_category_title_cache_size">Cache size</string>
    <string name="preference_title_cache_size">Covers</string>
    <string name="preference_title_thumbnail_cache_size">Cover thumbnails</string>
    <string name="preference_title_embedded_art_cache_size">Embedded covers</string>
    <string name="preference_category_title_maintenance">Maintenance operations</string>
    <string name="preference_title_optimize_database">Optimize database</string>
    <string name="preference_title_clear_cache">Clear cache memory</string>
    <string name="preference_default_various_artists">Various artists</string>
    <string name="preference_default_unknown_artist">Unknown artist</string>
    <string name="preference_dialog_title_database_optimization">Data optimization</string>
    <string name="progress_dialog_label_global_database">Main database</string>
    <string name="progress_dialog_label_current_database">Database : %1$s/%2$s</string>
    <string name="preference_screen_title_headphones">Headphones and audio outputs</string>
    <string name="preference_title_plug_auto_play">Auto start playback</string>
    <string name="preference_summary_plug_auto_play">Auto start playback when connecting audio output to the device</string>
    <string name="preference_title_pause_call">Auto pause</string>
    <string name="preference_summary_pause_call">Auto pause playback when receiving call</string>
    <string name="preference_screen_title_about">Informations</string>
    <string name="preference_title_premium">Version Premium</string>
    <string name="preference_title_privacy_policy">Privacy Policy</string>
    <string name="preference_title_opensource">Open source Licenses</string>
    <string name="preference_category_title_collection">Media Library</string>
    <string name="preference_title_settings_location">Locations</string>
    <string name="preference_summary_settings_location">Define paths to scan and to exclude for this library</string>
    <string name="preference_title_settings_extensions">File types</string>
    <string name="preference_summary_settings_extensions">Define extensions of files to search</string>
    <string name="preference_category_title_display">Display</string>
    <string name="preference_title_tab_visibility">Enabled tabs</string>
    <string name="preference_summary_tab_visibility">Select what tabs are shown in music library</string>
    <string name="preference_title_storage_display_details">Details in file explorer</string>
    <string name="preference_summary_storage_display_details">Display media details instead of file names (may be slow when visualizing lots of files at once).</string>
    <string name="preference_title_display_local_art">Display local arts</string>
    <string name="preference_summary_display_local_art">"If medias doesn't have embedded arts, display an image from the same folder."</string>
    <string name="preference_title_display_source_if_no_meta">Missing tags replacement</string>
    <string name="preference_summary_display_source_if_no_meta">"If a media doesn't contains tags, display filename instead of an empty title"</string>
    <string name="preference_title_genre_display">Details of genres</string>
    <string name="preference_list_value_genre_show_albums">Display albums</string>
    <string name="preference_list_value_genre_show_tracks">Display tracks</string>
    <string name="menuitem_label_sort">Sort order</string>
    <string name="menuitem_label_filter">Filter</string>
    <string name="menuitem_label_reload">Reload</string>
    <string name="menuitem_label_cancel_reload">Cancel Reloading</string>
    <string name="menuitem_label_show_hidden">Show hidden items</string>
    <string name="menuitem_label_share">Share</string>
    <string name="menuitem_label_toggle_car_mode">Car mode</string>
    <string name="menuitem_label_delayed_pause">Auto pause</string>
    <string name="menuitem_label_delayed_pause_in">Auto pause (%1$s)</string>
    <string name="menuitem_label_add">Add</string>
    <string name="menuitem_label_add_provider">Add a provider</string>
    <string name="menuitem_label_add_preset">Save this preset</string>
    <string name="menuitem_label_restore_presets">Reinitialize presets</string>
    <string name="menuitem_label_play">Play</string>
    <string name="menuitem_label_play_next">Play next</string>
    <string name="menuitem_label_add_to_queue">Add to queue</string>
    <string name="menuitem_label_add_to_playlist">Add to playlist</string>
    <string name="menuitem_label_details">Properties</string>
    <string name="menuitem_label_delete">Delete</string>
    <string name="menuitem_label_remove">Remove</string>
    <string name="menuitem_label_remove_all">Clear playlist</string>
    <string name="menuitem_label_hide">Hide</string>
    <string name="menuitem_label_show">Unhide</string>
    <string name="menuitem_label_edit">Edit</string>
    <string name="menuitem_label_use_file_art">Select another cover</string>
    <string name="menuitem_label_restore_file_art">Restore to original cover</string>
    <string name="label_yes">Yes</string>
    <string name="label_no">No</string>
    <string name="label_sort_A_Z">A-Z</string>
    <string name="label_sort_Z_A">Z-A</string>
    <string name="label_track_asc">Track # asc.</string>
    <string name="label_track_desc">Track # desc.</string>
    <string name="label_position_asc">Position asc.</string>
    <string name="label_position_desc">Position desc.</string>
    <string name="label_filename_A_Z">File name A-Z</string>
    <string name="label_filename_Z_A">File name Z-A</string>
    <string name="label_sort_artist_A_Z">Artist A-Z</string>
    <string name="label_sort_artist_Z_A">Artist Z-A</string>
    <string name="label_sort_album_A_Z">Album A-Z</string>
    <string name="label_sort_album_Z_A">Album Z-A</string>
    <string name="actionbar_confirmation_text_done">Done</string>
    <string name="actionbar_confirmation_text_cancel">Cancel</string>
    <string name="actionbar_drawer_toggle_label_open">Open navigation menu</string>
    <string name="actionbar_drawer_toggle_label_close">Close navigation menu</string>
    <string name="drawer_section_label_media_management">Media management</string>
    <string name="drawer_section_label_label_settings">Settings</string>
    <string name="drawer_item_label_manage_libraries">Libraries management</string>
    <string name="drawer_item_label_library_soundfx">Equalizer</string>
    <string name="drawer_item_label_library_settings">Library settings</string>
    <string name="drawer_item_label_application_settings">Global settings</string>
    <string name="drawer_item_label_settings">Settings</string>
    <string name="searchview_query_hint">Search</string>
    <string name="toast_press_back_again">Press BACK again to exit"</string>
    <string name="tab_label_accept_path">Scanned</string>
    <string name="tab_label_exclude_path">Excluded</string>
    <string name="tab_label_from_embedded_tag">Medias</string>
    <string name="tab_label_from_local_filesystem">Local files</string>
    <string name="tab_label_from_internet">Internet</string>
    <string name="tab_label_artists">Artists</string>
    <string name="tab_label_album_artists">Album Artists</string>
    <string name="tab_label_albums">Albums</string>
    <string name="tab_label_songs">Songs</string>
    <string name="tab_label_playlists">Playlists</string>
    <string name="tab_label_genres">Genres</string>
    <string name="tab_label_storage">Files</string>
    <string name="imageview_content_description_art">Cover art</string>
    <string name="imageview_content_description_repeat">Repeat one or all</string>
    <string name="imageview_content_description_previous">Skip backwards</string>
    <string name="imageview_content_description_play">Play and pause</string>
    <string name="imageview_content_description_next">Skip forwards</string>
    <string name="imageview_content_description_shuffle">Shuffle medias</string>
    <string name="imageview_content_description_currently_playing">Currently playing</string>
    <string name="imageview_content_description_playlist">Show/Hide playlist</string>
    <string name="imageview_content_description_option_menu">Show option menu</string>
</resources>