<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/audio_controls_controls_height"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
         >

        <ImageButton
            android:id="@+id/audio_player_repeat"
            style="@style/PlayerButton"
            android:contentDescription="@string/imageview_content_description_repeat"
            android:src="@drawable/ic_repeat_grey600_48dp" />

        <net.opusapp.player.ui.views.RepeatingImageButton
            android:id="@+id/audio_player_prev"
            style="@style/PlayerButton"
            android:contentDescription="@string/imageview_content_description_previous"
            android:src="@drawable/ic_skip_previous_grey600_48dp" />

        <ImageButton
            android:id="@+id/audio_player_play"
            style="@style/PlayerButton"
            android:contentDescription="@string/imageview_content_description_play"
            android:src="@drawable/ic_play_arrow_grey600_48dp" />

        <net.opusapp.player.ui.views.RepeatingImageButton
            android:id="@+id/audio_player_next"
            style="@style/PlayerButton"
            android:contentDescription="@string/imageview_content_description_next"
            android:src="@drawable/ic_skip_next_grey600_48dp" />

        <ImageButton
            android:id="@+id/audio_player_shuffle"
            style="@style/PlayerButton"
            android:contentDescription="@string/imageview_content_description_shuffle"
            android:src="@drawable/ic_shuffle_grey600_48dp" />
    </LinearLayout>


</merge>