<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/carmode_layout"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/player_art"
        android:scaleType="centerCrop"
        android:clickable="true"
        android:src="@drawable/no_art_normal" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_vertical|center_horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent_white"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/upper_panel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal" >

                <LinearLayout
                    android:id="@+id/audio_player_header"
                    android:layout_height="68.0dp"
                    android:layout_weight="25.0"
                    android:layout_width="fill_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <net.opusapp.player.ui.views.CustomTextView
                        android:id="@+id/audio_player_track_name"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:paddingBottom="2.0dip"
                        android:paddingLeft="20dp"
                        android:singleLine="true"
                        android:textColor="#ff000000"
                        android:textIsSelectable="false"
                        android:textSize="16.0dip" />

                    <net.opusapp.player.ui.views.CustomTextView
                        android:id="@+id/audio_player_artist_name"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:paddingLeft="20dp"
                        android:singleLine="true"
                        android:textColor="#ff999999"
                        android:textIsSelectable="false"
                        android:textSize="16.0dip" />
                </LinearLayout>

                <net.opusapp.player.ui.views.CustomTextView
                    android:id="@+id/audio_player_time"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="75.0"
                    android:gravity="center"
                    android:textColor="#ff33b5e5"
                    android:textIsSelectable="false"
                    android:textSize="23.0dip" />
            </LinearLayout>

            <SeekBar
                android:id="@+id/progress"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:minHeight="40dp"
                android:maxHeight="40dp"
                android:padding="0dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="horizontal"
                android:layout_margin="10dp">

                <ImageButton
                    android:id="@+id/audio_player_repeat"
                    style="@style/PlayerButton"
                    android:contentDescription="@string/imageview_content_description_repeat"
                    android:src="@drawable/ic_repeat_grey600_48dp"
                    android:visibility="gone"/>

                <net.opusapp.player.ui.views.RepeatingImageButton
                    android:id="@+id/audio_player_prev"
                    style="@style/PlayerButton"
                    android:contentDescription="@string/imageview_content_description_previous"
                    android:src="@drawable/ic_skip_previous_grey600_48dp"
                    android:layout_height="@dimen/audio_controls_controls_height_2"
                    android:layout_width="@dimen/audio_controls_controls_height_2" />

                <ImageButton
                    android:id="@+id/audio_player_play"
                    style="@style/PlayerButton"
                    android:contentDescription="@string/imageview_content_description_play"
                    android:src="@drawable/ic_play_arrow_grey600_48dp"
                    android:layout_width="@dimen/audio_controls_controls_height_2"
                    android:layout_height="@dimen/audio_controls_controls_height_2" />

                <net.opusapp.player.ui.views.RepeatingImageButton
                    android:id="@+id/audio_player_next"
                    style="@style/PlayerButton"
                    android:contentDescription="@string/imageview_content_description_next"
                    android:src="@drawable/ic_skip_next_grey600_48dp"
                    android:layout_height="@dimen/audio_controls_controls_height_2"
                    android:layout_width="@dimen/audio_controls_controls_height_2" />

                <ImageButton
                    android:id="@+id/audio_player_shuffle"
                    style="@style/PlayerButton"
                    android:contentDescription="@string/imageview_content_description_shuffle"
                    android:src="@drawable/ic_shuffle_grey600_48dp"
                    android:visibility="gone" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
